--- a/DishesMinimalApi/Resources/Messages.resx
+++ b/DishesMinimalApi/Resources/Messages.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DishNameExceedMaxLength" xml:space="preserve">
+    <value>Dish name length can't exceed 20 characters.</value>
+  </data>
+  <data name="DishNameNullOrEmpty" xml:space="preserve">
+    <value>Dish name can't be null or empty.</value>
+  </data>
   <data name="EntityNotFound" xml:space="preserve">
     <value>Entity was not found.</value>
   </data>
